few improvements for responsiveness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#" data-container="body" data-toggle="popover" data-placement="bottom" data-content="info@bizdemon.com">Contact</a></li>
+                  <li><a href="#" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="info@bizdemon.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -63,12 +63,12 @@
             <h4 class="modal-title" id="myModalLabel">About Business Demon</h4>
           </div>
           <div class="modal-body"> 
-            <h4>There's no reason why you can't turn your brilliant ideas into a real fruitful business!</h4> 
+            <h3>There's no reason why you can't turn your brilliant ideas into a real fruitful business!</h3> 
             <p>Globalization and today's technology enable any of us in starting up a new business. The investments needed to test your 
               ideas collecting concrete feedbacks from the potential customers are almost zero. You just need a good idea and, even more 
               important, be ready to settle a plan and stick on it till done.</p> 
             <p>At Business Demon we can help you in setting up your plan and focus on the essential steps to turn it into a fruitful business.</p>
-            <p>Contact us at: <a href="mailto:info@bizdemon.com">info@bizdemon.com</a></p>  
+            <p>Contact us at: <a class="text-primary" href="mailto:info@bizdemon.com">info@bizdemon.com</a></p>  
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
