--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="info@bizdemon.com">Contact</a></li>
+                  <li><a href="#" role="button" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="info@bizdemon.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
