switching popover in Contacts to tooltip for better portability

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#" role="button" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-content="info@bizdemon.com">Contact</a></li>
+                  <li><a href="#" data-toggle="tooltip" data-placement="bottom" title="info@bizdemon.com">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -85,7 +85,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!-- script src="../../assets/js/ie10-viewport-bug-workaround.js"></script -->
 
-    <!-- Initializing popovers -->
-    <script> $(function () { $('[data-toggle="popover"]').popover()})</script>
+    <!-- Initializing popovers/tooltips -->
+    <script> $(function () { $('[data-toggle="tooltip"]').tooltip()})</script>
   </body>
 </html>
